[gd_scene load_steps=11 format=3 uid="uid://ca3ytdsjxu8g6"]

[ext_resource type="Script" path="res://Map/main.gd" id="1_03un6"]
[ext_resource type="PackedScene" uid="uid://ba10wcyw8y7dq" path="res://Map/map.tscn" id="1_nr86h"]
[ext_resource type="PackedScene" uid="uid://cu7k3mjkvogxn" path="res://Pins/pin.tscn" id="2_yo16g"]
[ext_resource type="PackedScene" uid="uid://37gy3qmk2csn" path="res://UI/main_menu.tscn" id="4_2jcgs"]
[ext_resource type="PackedScene" uid="uid://017e21cajgct" path="res://Cart/cart.tscn" id="4_ygqci"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fhmpc"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jgn2b"]
noise = SubResource("FastNoiseLite_fhmpc")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_iqhto"]
sky_top_color = Color(0.65098, 0.811765, 0.976471, 1)
sky_horizon_color = Color(0.372549, 0.694118, 0.890196, 1)
sky_cover = SubResource("NoiseTexture2D_jgn2b")

[sub_resource type="Sky" id="Sky_aj48q"]
sky_material = SubResource("ProceduralSkyMaterial_iqhto")

[sub_resource type="Environment" id="Environment_2uicf"]
background_mode = 2
sky = SubResource("Sky_aj48q")
ambient_light_color = Color(0.211765, 0.380392, 0.262745, 1)
fog_sun_scatter = 0.3
fog_sky_affect = 0.29

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.23386, 0)
script = ExtResource("1_03un6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2uicf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.00555007, 0.999985, 0, -0.999985, 0.00555007, 0, 100.752, 0)
light_color = Color(1, 0.83, 0.66, 1)
light_energy = 0.194
shadow_enabled = true

[node name="map" parent="." instance=ExtResource("1_nr86h")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -56.4251, -5.16574, 80.7172)

[node name="pin" parent="map" instance=ExtResource("2_yo16g")]
transform = Transform3D(0.1875, 0, 0, 0, 0.1875, 0, 0, 0, 0.1875, -63.2291, 9.61329, -33.5892)

[node name="MainMenu" parent="." instance=ExtResource("4_2jcgs")]

[node name="Cart" parent="." instance=ExtResource("4_ygqci")]
transform = Transform3D(0.741429, 0.0211374, 0.670699, -0.0284974, 0.999594, -7.60254e-18, -0.670426, -0.0191131, 0.74173, -6.15786, 0.365383, -4.67727)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/player.tscn")
spawn_path = NodePath("..")

[connection signal="host_pressed" from="MainMenu" to="." method="_on_host_game_pressed"]
[connection signal="join_pressed" from="MainMenu" to="." method="_on_join_game_pressed"]
[connection signal="play_pressed" from="MainMenu" to="." method="_on_play_pressed"]
[connection signal="quit_pressed" from="MainMenu" to="." method="_on_quit_pressed"]
